[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaysoft-dbmocker"
version = "1.0.0"
description = "JaySoft-DBMocker - A comprehensive tool for generating realistic mock data for SQL databases"
authors = [{name = "JaySoft Development", email = "info@jaysoft.dev"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "faker>=19.0.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "click>=8.0.0",
    "tqdm>=4.64.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
    "colorama>=0.4.6",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
gui = [
    "tkinter",
]

[project.scripts]
dbmocker = "dbmocker.cli:main"

[project.urls]
Homepage = "https://github.com/iamjpsonkar/JaySoft-DBMocker"
Repository = "https://github.com/iamjpsonkar/JaySoft-DBMocker.git"
Issues = "https://github.com/iamjpsonkar/JaySoft-DBMocker/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dbmocker*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=dbmocker --cov-report=term-missing --cov-report=html"
